k8s/namespace.yaml
# Purpose: Kubernetes Namespace configuration for grouping our resources.
apiVersion: v1
kind: Namespace
metadata:
  name: java-app-demo
  labels:
    name: java-app-demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
